--- a/repos/extra-i686/PKGBUILD
+++ b/repos/extra-i686/PKGBUILD
@@ -1,20 +1,21 @@
 # $Id$
-# Maintainer: Angel Velasquez <angvp@archlinux.org> 
+# Maintainer: Angel Velasquez <angvp@archlinux.org>
+# Maintainer: Felix Yan <felixonmars@gmail.com>
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=sonata
 pkgver=1.6.2.1
-pkgrel=11
+pkgrel=12
 pkgdesc="Elegant GTK+ music client for MPD"
 arch=('i686' 'x86_64')
-url="http://sonata.berlios.de/"
+url="http://sourceforge.net/projects/sonata.berlios"
 license=('GPL3')
 depends=('pygtk' 'python2-mpd')
 optdepends=('python2-egg: Enhanced system tray support'
             'python2-tagpy: Metadata editing support'
             'python2-dbus: Various extra functionality (e.g. multimedia keys support)')
 provides=('python2-mmkeys')
-source=(http://download.berlios.de/${pkgname}/${pkgname}-$pkgver.tar.gz
+source=("http://downloads.sourceforge.net/sourceforge/${pkgname}.berlios/${pkgname}-$pkgver.tar.gz"
         mpd-0.18.patch
         info.py.patch)
 md5sums=('0b912325e7175abad3bf6c0edc071e05'
@@ -30,5 +31,5 @@ build() {
 
 package() {
   cd ${pkgname}-$pkgver
-  python2 setup.py install --prefix=/usr --optimize 1 --root="$pkgdir"
+  python2 setup.py install --prefix=/usr --optimize=1 --root="$pkgdir"
 }
