--- a/repos/extra-any/PKGBUILD
+++ b/repos/extra-any/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Thomas Baechler <thomas@archlinux.org>
 
 pkgbase=thunderbird-i18n
-pkgver=24.6.0
+pkgver=31.0
 pkgrel=1
 pkgdesc="Language pack for Thunderbird"
 arch=('any')
@@ -24,17 +24,17 @@ _languages=(
   'da     "Danish"'
   'de     "German"'
   'el     "Greek"'
-  'en-GB  "English (United Kingdom)"'
-  'en-US  "English (United States)"'
+  'en-GB  "English (British)"'
+  'en-US  "English (US)"'
   'es-AR  "Spanish (Argentina)"'
   'es-ES  "Spanish (Spain)"'
   'et     "Estonian"'
   'eu     "Basque"'
   'fi     "Finnish"'
   'fr     "French"'
-  'fy-NL  "Frisian (Netherlands)"'
+  'fy-NL  "Frisian"'
   'ga-IE  "Irish"'
-  'gd     "Gaelic"'
+  'gd     "Gaelic (Scotland)"'
   'gl     "Galician"'
   'he     "Hebrew"'
   'hr     "Croatian"'
@@ -46,17 +46,17 @@ _languages=(
   'ja     "Japanese"'
   'ko     "Korean"'
   'lt     "Lithuanian"'
-  'nb-NO  "Norwegian (Bokmal)"'
+  'nb-NO  "Norwegian (Bokmål)"'
   'nl     "Dutch"'
   'nn-NO  "Norwegian (Nynorsk)"'
   'pa-IN  "Punjabi"'
   'pl     "Polish"'
-  'pt-BR  "Brazilian Portuguese"'
-  'pt-PT  "Portuguese"'
+  'pt-BR  "Portuguese (Brazilian)"'
+  'pt-PT  "Portuguese (Portugal)"'
   'rm     "Romansh"'
   'ro     "Romanian"'
   'ru     "Russian"'
-  'si     "Sinhalese"'
+  'si     "Sinhala"'
   'sk     "Slovak"'
   'sl     "Slovenian"'
   'sq     "Albanian"'
@@ -66,8 +66,8 @@ _languages=(
   'tr     "Turkish"'
   'uk     "Ukrainian"'
   'vi     "Vietnamese"'
-  'zh-CN  "Chinese (simplified)"'
-  'zh-TW  "Chinese (traditional)"'
+  'zh-CN  "Chinese (Simplified)"'
+  'zh-TW  "Chinese (Traditional)"'
 )
 
 pkgname=()
@@ -94,58 +94,58 @@ _package() {
     "$pkgdir/usr/lib/thunderbird/extensions/langpack-$1@thunderbird.mozilla.org.xpi"
 }
 
-md5sums=('97252ee507ad8b999650ebd7792f82e5'
-         '8a4676e4926282c18d62b9bc015557ed'
-         '3414efc76dd0126ef26b14bd2b2b1c5c'
-         'c03857128a68ddb34fafca0888a929c9'
-         '5fa276aabc2a05b7a36aa801a1ac542a'
-         '508a6e921305bccafe9540f4baf3948d'
-         'ca74a112d8a4c2aa51f26c22fb2dff11'
-         '323cd7bf902c87611ae57ab3ce58d207'
-         'd54ce15b2120a20d2d48ba8cc1be1f6f'
-         'd787a1f6bfaf1d96bdb4959a1a55b9a2'
-         '2a84b4c0c2d4d93623c90077fcbc9acd'
-         '37b81e21346d039c070b1db7a40bc15f'
-         'f70af33367ff790c8c535be052e17127'
-         'df6b41e8163914ecaeff54da489d310a'
-         'd74ae28aa966db0e0167835ef7730aee'
-         'bb787487cae4a214c284fff75ae4e0b3'
-         '52dcc259dc65a0273abf62927a053339'
-         '2d3640ae4323cd9746225f0751bc2897'
-         '7a1e7ef22dafc2c0afcbfdbdbc7a7533'
-         '4146cf5b8f0b0bd5cfa1eb689254375d'
-         '9e451dbef1f699ff8ce4d7b95aeb01db'
-         '63645712d4364f959b78d57bc7b80ac1'
-         'ba1516aecf947bf13cdc8e33741475a4'
-         'dccef7c6ffff74f771c640480ca9cc41'
-         '66c50079a7bb16e4974d9d0a50144757'
-         'f11c51e743e698c79dd5cf8bf3c9d50d'
-         '6da3f951e9afa8d43880030a212d895b'
-         '64d448dfdf20ddbfe0cd4dde74bf4326'
-         '041d07884b6ae71ec2780045bcdbee76'
-         '614a0fb97ffbe6d44a9e7a20b9f07ccb'
-         '097d6ce905c9d518141465b6dd653986'
-         '933c03c651637a714bdc0b7f8d70da26'
-         '1b1c54e27d393c0d279c7d2d956d3ead'
-         'b1fbc6babeddcf4ed26bd255ea7ce9f9'
-         '86e68ce4534a90b9b83335b9166a4d43'
-         '14edda05d8b442b4330bd620235d62a4'
-         '5541342c17b1956d97c25aee2f4eeaf3'
-         '0092179cc6adc5cc2d62adc1de4fe739'
-         'b537937d1e99b51ae141f8cc0c88f5b6'
-         'b8e03efdb3f658bc9f67214364658bd5'
-         '65d561a3f83432abc1406ef117147d82'
-         '35e00aa91be97eaceab4f6e45c4bc0f8'
-         'c0e75520d41cb1d2060bdd88682e6b21'
-         'af11e405b92dcbf7f0d826ae1b0d4633'
-         'e7a73939108ea425a22986d180ebaf5c'
-         'af08bcc42aaae872696417d173b27b3b'
-         '255c2c457e30e93f2f0faecc2822d9d4'
-         '0113d06aa86da3343c2132f151b929bb'
-         'd4c9d98003333a80eb57f57d8ef36c4a'
-         'a7849f78b5a19e7d08bb10c7c351c361'
-         'a9e53caf3eee53f9750bf0704aedd72d'
-         '6276b645d20be4ba978944844eee515c'
-         '50bf6125e219c0a4ec7877314abf1bb7'
-         '561ebc13c03048e4a627176575be8757'
-         '6034cd5960e1bd56867bb671ebb9d21b')
+md5sums=('17bde4d1d364775b2ee1703fa2feb229'
+         '8d8b275b316f25be498f2c14abd2ec68'
+         '1763b371dd00f902af7299ea7e9fc574'
+         '3ca9f2b4c3fbe27dc7c1d8f4c0ec5d97'
+         '96db7a319aa8658e0a9a08b11f9dcfe0'
+         'd7644420a4b26e9d64a44d22e22641d0'
+         '15738bb05d4b9b096268a8d3089149d5'
+         '3aa388c8f4fcdc930c9f75f51112dbae'
+         '61de52f1fbf717b575d091b60fc07ff7'
+         '81748e80ca61455060d5db8b89aa314f'
+         '6b0cf80a15ef445cf0e328ab5c9038ca'
+         'b636938b6752939e0f36830867961ec1'
+         'd54841c678657d9725ab6329ddbde2ea'
+         '609b2485ece9f8d4b9d7144ace149c53'
+         'db0585d3f4ec60c7f5f146d22d6842e3'
+         'cff6f7cdf386911c3f3f797ecdf7246e'
+         'e8b1b67732297206e5074293e06c6860'
+         '2ad5b23230fdce0332795e3eda935ee5'
+         '648c8aa11d9943289a18198ab1cb393e'
+         '8f74a8f9ce0d65cfa2671bade57f111b'
+         'a974f9b12eec55335dc6f8c3f77cbce3'
+         '2ee93708f204fe5a99edc5bf7c05d4bd'
+         '6804e24eaf9dcba87b077c67fc4794f0'
+         'e498c260deeec23119d1ff13ade225d3'
+         '575415c3363f2396a0adf83fd7f8e8a7'
+         '735edcdb58f8ee0b18b3c59df2a41784'
+         '2ec4f96840776c27abd1a81fa172d246'
+         '443455edfc731e86f2dc0a51d1234642'
+         '7b91898f93bb12311c15351659c4ebd1'
+         '5c9322ac54bb92bc692ebac08423fd0e'
+         '4a89384448d027d72ecb2909e23ad683'
+         '87aa196d8585285a149ca03b12b9676b'
+         '53be975b7c418860d40c7c92309974af'
+         'c4208b228abb90640d2c49684e8574e0'
+         'f0313dd1abf8fd0a1d06bc0a6a6bf28a'
+         '7a85f4982a8d3940b1d01698fd23dce2'
+         '26b1754fc14cee9cb0e67b0b5bb280d5'
+         '32dfa38695fc20a9ecaeaf35bf5436eb'
+         'b6e4e2f4db2868996bbed4f2cac432b1'
+         'bf9e4757cd6a56ac1576a5d160471f97'
+         '7b0127c1e4f6d038505966871db51392'
+         '61907fcb7ce920a43e6f1d0b370bbb07'
+         '45a57af59c17ae89c9ac02c05cf1f8ec'
+         '1f5ee88343c85d94340b4f06d67f8b79'
+         '4f45b3388a36d86044f199d87fe67070'
+         '939042b9677b0b0b3623374838563fb8'
+         '7c6743e0efb65a7ce5142413f27fb2b3'
+         'ec62353e65c1cabc94327eea096cd350'
+         '28695dbb530fbf4e0ad5052bbb1ee76d'
+         'ea0fdc5cb2bf6e9ebbf61b1558e3d3cf'
+         'cb0ab3f7a7addf9011ddc4e2849d8793'
+         '16c19c21def75316a7e6f279bac1841e'
+         '08064811d0a66e4707cff28c26d55ab8'
+         'a1a03570fe349f1a454fe8388424c15c'
+         'b8f8fa6cce5d3879d3a448b4a42ab12e')
