--- a/repos/extra-any/PKGBUILD
+++ b/repos/extra-any/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgbase=pylint
 pkgname=('python2-pylint' 'python-pylint')
-pkgver=1.2.1
+pkgver=1.3.0
 pkgrel=1
 pkgdesc="Analyzes Python code looking for bugs and signs of poor quality"
 arch=('any')
@@ -15,8 +15,8 @@ license=('GPL')
 makedepends=('python2-astroid' 'python-astroid' 'python2-setuptools' 'python-setuptools')
 checkdepends=('python-pytest' 'python2-pytest')
 optdepends=('tk: Pylint GUI')
-source=(http://pypi.python.org/packages/source/p/${pkgbase}/${pkgbase}-${pkgver}.tar.gz)
-sha1sums=('6a98e9ee4e3b16d2dcd87d5c9af3bde937b473f4')
+source=("http://pypi.python.org/packages/source/p/${pkgbase}/${pkgbase}-${pkgver}.zip")
+sha1sums=('f2be4efd219ba520e6a8fb208478e1beb0393c7e')
 
 prepare() {
   cp -a ${pkgbase}-${pkgver}{,-py3}
