--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@ pkgver=0.1.51
 pkgrel=1
 pkgdesc="A pure Java implementation of SSH2"
 arch=('any')
-url="http://www.jcraft.com/jsch/"
+url='http://www.jcraft.com/jsch/'
 license=('BSD')
 depends=('java-runtime-headless')
 makedepends=('apache-ant')
@@ -18,9 +18,9 @@ build() {
 }
 
 package() {
-  install -Dm644 ${srcdir}/${_libname}-${pkgver}/dist/lib/${_libname}-${pkgver}.jar \
-                 ${pkgdir}/usr/share/java/${_libname}-${pkgver}.jar
-  ln -s ${_libname}-${pkgver}.jar ${pkgdir}/usr/share/java/${_libname}.jar
-  install -Dm644 ${srcdir}/${_libname}-${pkgver}/LICENSE.txt \
-                 ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
+  install -Dm644 "${srcdir}/${_libname}-${pkgver}/dist/lib/${_libname}-${pkgver}.jar" \
+                 "${pkgdir}/usr/share/java/${_libname}-${pkgver}.jar"
+  ln -s ${_libname}-${pkgver}.jar "${pkgdir}/usr/share/java/${_libname}.jar"
+  install -Dm644 "${srcdir}/${_libname}-${pkgver}/LICENSE.txt" \
+                 "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
