Fix typo on noextract array
git-svn-id: file:///srv/repos/svn-packages/svn@218218 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -63,7 +63,7 @@ noextract=(icedtea_${_icedtea_ver}_openjdk.tar.bz2
            icedtea_${_icedtea_ver}_jaxp.tar.bz2
            icedtea_${_icedtea_ver}_jaxws.tar.bz2
            icedtea_${_icedtea_ver}_jdk.tar.bz2
-           icedtea_${_icedtea_ver}_lanbtools.tar.bz2
+           icedtea_${_icedtea_ver}_langtools.tar.bz2
            icedtea_${_icedtea_ver}_hotspot.tar.bz2)
 
 [ "$CARCH" = "x86_64" ] && _JARCH=amd64
