--- a/repos/extra-any/PKGBUILD
+++ b/repos/extra-any/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Ronald van Haren <ronald.archlinux.org>
 
 pkgname=bdf-unifont
-pkgver=6.3.20131221
+pkgver=7.0.03
 pkgrel=1
 pkgdesc="GNU Unifont Glyphs"
 arch=('any')
@@ -11,7 +11,7 @@ url="http://unifoundry.com/unifont.html"
 depends=('fontconfig' 'xorg-fonts-encodings' 'xorg-font-utils')
 install=unifont.install
 source=("http://unifoundry.com/pub/unifont-${pkgver}/font-builds/unifont-${pkgver}.bdf.gz" 'LICENSE')
-sha1sums=('1bfc13a4b0e9a6407df85ad3f5f43f3598677ae5'
+sha1sums=('f1315504a67d4b7b5d7d6b25dff02d84f9f67aab'
           'e4ba558b4af9b8ab0f129c1f1788e168e412b9be')
 
 package() {
