--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: K. Piche <kpiche@rogers.com>
 
 pkgname=r
-pkgver=3.1.0
-pkgrel=2
+pkgver=3.1.1
+pkgrel=1
 pkgdesc="Language and environment for statistical computing and graphics"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -21,13 +21,11 @@ install=r.install
 source=("http://cran.r-project.org/src/base/R-${pkgver%%.*}/R-${pkgver}.tar.gz"
 	'r.desktop'
 	'r.png'
-	'R.conf'
-	'sweave.patch')
-sha1sums=('a9d13932c739cc12667c6a17fabd9361624a1708'
+	'R.conf')
+sha1sums=('e974ecc92e49266529e8e791e02a80c75e50b696'
           'd7fa521345b230a4187d60d07d06ce4b6d573e3f'
           'a69a07ec363440efc18ce0a7f2af103375dea978'
-          '43668da6cfd1b4455a99f23e79e2059294dddac9'
-          '7c89c315673406d6f2e08170dbe12f46f9cec1c5')
+          '43668da6cfd1b4455a99f23e79e2059294dddac9')
 
 prepare() {
    cd R-${pkgver}
@@ -35,9 +33,6 @@ prepare() {
    sed -i 's|$(rsharedir)/texmf|${datarootdir}/texmf|' share/Makefile.in
    # fix for texinfo 5.X
    sed -i 's|test ${makeinfo_version_min} -lt 7|test ${makeinfo_version_min} -lt 0|' configure
-
-   # upstream fix for https://bugs.r-project.org/bugzilla/show_bug.cgi?id=15752
-   patch -Np0 -i ${srcdir}/sweave.patch
 }
 
 build() {
