--- a/repos/extra-x86_64/PKGBUILD
+++ b/repos/extra-x86_64/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Damir Perisa <damir.perisa@bluewin.ch> # Contributor: Christopher Reimer <c.reimer1993@gmail.com>
 
 pkgname=texmacs
-pkgver=1.0.7.21
+pkgver=1.99.1
 pkgrel=1
 pkgdesc="Free scientific text editor, inspired by TeX and GNU Emacs. WYSIWYG editor TeX-fonts and CAS-interface (Giac, GTybalt, Macaulay 2, Maxima, Octave, Pari, Qcl, R and Yacas) in one."
 arch=('i686' 'x86_64')
@@ -15,14 +15,13 @@ depends=('perl' 'guile1.8' 'texlive-core' 'python2' 'libxext' 'freetype2' 'share
 optdepends=('transfig: convert images using fig2ps'
             'gawk: conversion of some files')
 makedepends=('ghostscript')
-#source=(ftp://ftp.texmacs.org/pub/TeXmacs/targz/TeXmacs-${pkgver}-src.tar.gz)
 source=(http://www.texmacs.org/Download/ftp/tmftp/source/TeXmacs-${pkgver}-src.tar.gz)
 install=texmacs.install
 options=('!emptydirs')
-sha1sums=('e8086acd4b7c1bb3aaccf75b6b0199aa612cb66c')
+sha1sums=('a5c7171644c84866445334b2d0cb39a6d9dd5f54')
 
-build() {
-  cd ${srcdir}/TeXmacs-${pkgver}-src
+prepare() {
+  cd "${srcdir}/TeXmacs-${pkgver}-src"
   sed -i 's/env python/env python2/' \
     plugins/{mathematica/bin/realpath.py,python/bin/tm_python,sage/bin/tm_sage} \
     TeXmacs/misc/inkscape_plugin/texmacs_reedit.py
@@ -37,6 +36,10 @@ build() {
   sed -i '/gtk-update-icon-cache/d' Makefile.in
   sed -i '\/icons\/gnome 2>\/dev\/null/d' Makefile.in
 
+}
+
+build() {
+  cd "${srcdir}/TeXmacs-${pkgver}-src"
   export QMAKE=qmake-qt4
   export MOC=moc-qt4
   export UIC=uic-qt4
@@ -47,9 +50,9 @@ build() {
 }
 
 package() {
-  cd ${srcdir}/TeXmacs-${pkgver}-src
+  cd "${srcdir}/TeXmacs-${pkgver}-src"
   make DESTDIR=${pkgdir} install
 
  # fix fig2ps script
- sed -i 's|${prefix}|/usr|' ${pkgdir}/usr/bin/fig2ps
+ sed -i 's|${prefix}|/usr|' "${pkgdir}/usr/bin/fig2ps"
 }
