--- a/repos/extra-x86_64/PKGBUILD
+++ b/repos/extra-x86_64/PKGBUILD
@@ -3,16 +3,16 @@
 # Contributor: Paul Ezvan <paul@ezvan.fr>
 
 pkgname=terminology
-pkgver=0.5.1
+pkgver=0.6.1
 pkgrel=1
 pkgdesc="EFL based terminal emulator"
 arch=('i686' 'x86_64')
 url="http://www.enlightenment.org/p.php?p=about/terminology"
 license=('BSD')
 depends=('elementary')
-source=("http://download.enlightenment.org/rel/apps/${pkgname}/${pkgname}-${pkgver}.tar.bz2")
+source=("http://download.enlightenment.org/rel/apps/${pkgname}/${pkgname}-${pkgver}.tar.gz")
 install=terminology.install
-sha1sums=('5246904f5e7889cbf18c59a68d832fe36b43fafc')
+sha1sums=('c0f1f5d32abd2928476f168a8f58c5d3d4169f77')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
