--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer : Tobias Powalowski <tpowa@archlinux.org>
 
 pkgname=archboot
-pkgver=2014.06
-pkgrel=2
+pkgver=2014.08
+pkgrel=1
 pkgdesc="Advanced, modular arch boot/install image creation utility"
 arch=(any)
 license=('GPL')
@@ -24,7 +24,7 @@ depends=('mkinitcpio>=0.8.5-1' 'mksyslinux>=2010.08-2' 'mkpxelinux>=2010.08-2' '
 	 'b43-fwcutter>=015-1' 'wpa_supplicant>=0.7.3-5' 'rsync>=3.0.9-2' 'gzip>=1.4-4' 'libarchive>=3.0.3-5'
 	 'device-mapper>=2.02.95-1' 'screen>=4.0.3-13' 'elfutils>=0.152-2' 'pam>=1.1.5-2' 'cracklib>=2.8.18-2'
 	 'nfs-utils>=1.2.5-2' 'nfsidmap>=0.24-3' 'readline>=6.2.002-1' 'acl>=2.2.51-1' 'attr>=2.4.46-1' 'pcre>=8.30-1'
-	 'cpio>=2.11-3' 'fuse>=2.8.7-1' 'libusb>=1.0.18-1' 'vim>=7.4.0-1' 'lzo2>=2.06-1' 'libsasl>=2.1.23-9' 'libldap>=2.4.30-1'
+	 'cpio>=2.11-3' 'fuse>=2.8.7-1' 'libusb>=1.0.18-1' 'vim>=7.4.0-1' 'lzo>=2.06-1' 'libsasl>=2.1.23-9' 'libldap>=2.4.30-1'
 	 'gpm>=1.20.6-7' 'libevent>=2.0.17-1' 'gcc-libs>=4.6.3-1' 'sdparm>=1.07-1' 'licenses>=2.9-1' 'pptpclient>=1.7.2-4'
 	 'zd1211-firmware>=1.4-5' 'ipw2100-fw>=1.3-6' 'ipw2200-fw>=3.1-4' 'smbclient>=3.6.3-4'  'dhcpcd>=5.5.4-1' 'openssl>=1.0.1-1'
 	 'git>=1.7.9.5-1' 'dmraid>=1.0.0.rc16.3-2' 'linux-atm>=2.5.2-1' 'netctl>=0.6-1' 'parted>=3.1-1' 'tzdata>=2012b-1'
@@ -47,7 +47,7 @@ depends=('mkinitcpio>=0.8.5-1' 'mksyslinux>=2010.08-2' 'mkpxelinux>=2010.08-2' '
          'intel-ucode>=20120606-1' 'arch-install-scripts>=5-1' 'zsh>=5.0.0-2' 'gdbm>=1.10-1'
          'grml-zsh-config>=0.6.2-1' 'cpupower>=3.5-4' 'wvdial>=1.61-4' 'xl2tpd>=1.3.0-2' 'usb_modeswitch>=1.2.4-1'
          'gummiboot>=6' 'refind-efi>=0.4.5-1' 'efibootmgr>=0.6.0-3' 'f2fs-tools>=1.1.0-2' 'prebootloader>=20130206-1' 
-         'lockdown-ms>=20130326-1' 'efivar>=0.4_18_gb8c524c-1')     
+         'lockdown-ms>=20130326-1' 'efivar>=0.4_18_gb8c524c-1' 'ethtool>=1:3.13-1')     
 
 source=(ftp://ftp.archlinux.org/other/$pkgname/$pkgname-$pkgver-$pkgrel.tar.bz2)
 backup=('etc/archboot/allinone.conf'
@@ -66,7 +66,7 @@ install=archboot.install
 
 package()
 {
-  cd "$srcdir"/$pkgname-$pkgver-2
+  cd "$srcdir"/$pkgname-$pkgver-1
   mv * "$pkgdir/"
 }
-md5sums=('b78c7d55b57e9bce419dabf81e29b813')
+md5sums=('5288c8beef5049d0e4a103db98626318')
