--- a/trunk/munin-async.service
+++ b/trunk/munin-async.service
@@ -1,6 +1,8 @@
 [Unit]
 Description=Munin Async Service
 After=syslog.target network.target
+After=munin-node.service
+Requires=munin-node.service
 
 [Service]
 PIDFile=/run/munin/munin-asyncd.pid
