--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdelibs
-pkgver=4.13.3
-pkgrel=3
+pkgver=4.14.0
+pkgrel=1
 pkgdesc="KDE Core Libraries"
 arch=('i686' 'x86_64')
 url='https://projects.kde.org/projects/kde/kdelibs'
@@ -16,14 +16,11 @@ depends=('attica' 'libxss' 'krb5' 'grantlee' 'qca' 'libdbusmenu-qt' 'polkit-qt'
 makedepends=('cmake' 'automoc4' 'avahi' 'libgl' 'hspell' 'mesa')
 install=${pkgname}.install
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.xz"
-        'kde-applications-menu.patch' 'archlinux-menu.patch' 'qt4.patch'
-        'pyqt.patch' 'kdelibs-cve-2014-5033.patch')
-sha1sums=('9c0e963fa2db119ac37e15f31c05d18d3043a58e'
+        'kde-applications-menu.patch' 'archlinux-menu.patch' 'qt4.patch')
+sha1sums=('d8c56abfa101b0bd39e05ae36b7f6063d8fe360c'
           '86ee8c8660f19de8141ac99cd6943964d97a1ed7'
           '63a850ab4196b9d06934f2b4a13acd9f7739bc67'
-          'ed1f57ee661e5c7440efcaba7e51d2554709701c'
-          'c7c4cb4e557c4ab07b29ea757b773497cf8b9dbe'
-          '9c808a7e382f59d730a4ced06ef88165f3d87eec')
+          'ed1f57ee661e5c7440efcaba7e51d2554709701c')
 
 prepare() {
        mkdir build
@@ -34,11 +31,6 @@ prepare() {
        patch -p1 -i "${srcdir}"/archlinux-menu.patch
        # qmake refers to Qt5
        patch -p1 -i "${srcdir}"/qt4.patch
-
-       # support newer PyQt build system
-       patch -p1 -i "${srcdir}"/pyqt.patch
-
-       patch -p1 -i "${srcdir}/kdelibs-cve-2014-5033.patch"
 }
 
 build() {
