--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -52,11 +52,10 @@ pkgname=('kde-l10n-ar'
          'kde-l10n-tr'
          'kde-l10n-ug'
          'kde-l10n-uk'
-         'kde-l10n-vi'
          'kde-l10n-wa'
          'kde-l10n-zh_cn'
          'kde-l10n-zh_tw')
-pkgver=4.13.3
+pkgver=4.14.0
 pkgrel=1
 arch=('any')
 url='http://www.kde.org/'
@@ -112,68 +111,66 @@ source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}/${pkgbase}-ar-$
         "http://download.kde.org/stable/${pkgver}/src/${pkgbase}/${pkgbase}-tr-${pkgver}.tar.xz"
         "http://download.kde.org/stable/${pkgver}/src/${pkgbase}/${pkgbase}-ug-${pkgver}.tar.xz"
         "http://download.kde.org/stable/${pkgver}/src/${pkgbase}/${pkgbase}-uk-${pkgver}.tar.xz"
-        "http://download.kde.org/stable/${pkgver}/src/${pkgbase}/${pkgbase}-vi-${pkgver}.tar.xz"
         "http://download.kde.org/stable/${pkgver}/src/${pkgbase}/${pkgbase}-wa-${pkgver}.tar.xz"
         "http://download.kde.org/stable/${pkgver}/src/${pkgbase}/${pkgbase}-zh_CN-${pkgver}.tar.xz"
         "http://download.kde.org/stable/${pkgver}/src/${pkgbase}/${pkgbase}-zh_TW-${pkgver}.tar.xz")
-sha1sums=('c9a61e36e268fa59ad3853bf28ef91efe3f41922'
-         '12652a2d9bdc49dbaf8e41c8059ae5cd66808835'
-         '821ae26664d44bd31a2bb371ce93d9b6f9936b34'
-         '0eba7a78fd1aa873c85faa96545cf01f0da86821'
-         '5c463f4489e940dae91f99b1c7f39f62a493ab7c'
-         'f289f79f9664d1f992ce7160cf31ffde7e62c4a8'
-         '6d5ef28431c3e5f80b4ad910eaf7d632da4dd810'
-         'ed90fca69b8ed98323f1b8e2cc01be1d21320280'
-         '262e91bf0fd6423da368e419fc357d3c2455797b'
-         '4a34285b83a8bc4b8e31f06a14285772990f0cce'
-         '338f10a6f110a15ef0502e3a1e6b79ea509b5514'
-         '9f3d5dedf25d3b82484ad12598f430fb96fbb083'
-         '0c76054152806c2da856c85af66b032ac7fcd11f'
-         '26aef99ae591e9d6ee648f9869921754029eab04'
-         'a77e4494b4a8da4abcbea1bedc883a5ba0d06cc7'
-         '621e7734da7d289013a581ab9a01516277537fba'
-         '10a4ceff2fe2b29bf05c2199ce8c30be71a8b4f3'
-         '1721142355aa5d813c6d1adf16d3097021fe207f'
-         'cc775b649653ac249ab9df2917eaf67265efb862'
-         '17222d3f71401fdb55daf2d4f9263fc734d8fb39'
-         '690be63152d57db6c1efcaa0c1de16b555f113fe'
-         '66575ecbe058e7bddf992c831b131ce2256c3aa5'
-         '8259ba3989565158a1ed9db2f2ed0e061e2d316e'
-         '5a946a9dc82fd02477da227d3d86767cd1bab9d8'
-         '9a08e701a70e34241489b52855716fea1b3ceb7f'
-         '233d69bb85421ae020db2dd8d0d19787cf39f461'
-         '78ec51a364ced41b976039c533fa01bcd01fef86'
-         '101d46d27582294fbb0f843b2b9fe38b4d6894bc'
-         '407afedf3f65a60b9e154ce80ccac814f6e9da21'
-         '89934546ca6cd26f5716fc44c893ce4000aa7602'
-         'd1f24ecd000a1d077af68055f3548973408b946a'
-         '02d7633a616fc576e9dcb5b260acb3a1fbcd5695'
-         '68b1da08325b39ee0f18aeb6c68c3dc18da1b90b'
-         'c553c30eaf2b57c3f5ad83007edf628493dc7dc0'
-         '0b05a64b4d6c5537b5e66d271a2b8c8b3d6417fe'
-         'ba5e32b2a0e23df918c201a12029e15134b60d9e'
-         'e39894e46d1803224f03b84c95ba1b163e642875'
-         '7b8801beb77fce8209c1ddffd4701d5beff59536'
-         '8657d5d0710ae9c0f92ee1219f78607294aa9d5d'
-         '8989f52febc5af36b2fb494d37848c6d985a8ac6'
-         '53b6b1e70da2c182e3b4ef0771e99be16ad1ca78'
-         'd04f5ac398e8e339bbeed8a3b33767878fe1b5e5'
-         'a9c131e509b3ddc8667ae416e7f2597c404ead4a'
-         '5ce46b3e769820efffb76b4d19c9966df1aaa0cc'
-         '3074f977de5ad1330465dba22df56dc90bf8d1f4'
-         '86963b1646a7946f54d7de1238dc7e5092ff2ef9'
-         'a41a107406d58a7b0b382e885a65f7c72b1370c4'
-         '0538ec7f179b62bc8938e20e03f7f245da34e15b'
-         '3685c95515309003aad85831d96b4f63ac1fa1f7'
-         'e6baf334e8ecac74559e27dda5e526507ad7993f'
-         '9aa4cb63adcccbc94dd805c46fb1fde7fbfe5fbc'
-         '915a809210777cde446ee8a25c4d87d29910dc7b'
-         '4beea930316ab046d23cec2b12aa42aaf1e4370d')
+sha1sums=('e2ae7d823f8eeb213cfa6c660d232aaec3696f5d'
+          '3f6af3e921c3096a9df4df2f45f156550cbe91d2'
+          '630d9932f87ea78b3114263510eeb68af76f5b10'
+          'f71278de1e11501d09c9f83ced6c2a3f59159d9f'
+          '42da8abbc99fde03f2bfe251923dde1cf833177e'
+          '97701cbb51569d5c498b92ff7d24211decaf5690'
+          '396a0825afcd8f0a7455ca76a25e88d939ae59ad'
+          '11ba070b38a1df6ee9a0781ad7511b84504f19ca'
+          'e9b5b634ec896281725ccadc0e545a8c61ca619f'
+          'f331767b499da9a50f40abdd08674897552e1e87'
+          'ae23169fd41f3cf1656ca99d14b95b5ae96190eb'
+          '0642c4e18f717e8e0674feee278955ca0ed339f7'
+          'dfcb4bce3131982bd2b486f67c54a298bfe0f3de'
+          'ab9f55f6fbadb23136c65ad514697c4218df056e'
+          '04be78d9f1f0d7189ab860c142f522f24dcfdf3f'
+          'a48f7680ce248c39933d48c2f9babdc8c1894615'
+          '23802ae7ee9de9920667b9ea6982cd1e9e2a5187'
+          '0fcca4185f3e51853702c870c78464d375020c89'
+          '17fc089b80b396aecd725fe05e31ce212339ad7b'
+          '30e8be2fa045d079933a7e63b753aa902e7b4f3a'
+          'aec1398bf63f56dc9b60fc06b3bb9d607371d583'
+          'a782664440c9ab699d11df12a0a3d93f5e2419bc'
+          '3c676dfd84c7b9b6c2440bb33a1de5c8a4c7ef2d'
+          'daf50dbe9beb6e5f9bbeaf6fb7cdd18f696d92e4'
+          '498925f3331c09f26dda768cfe82d4e841807b2a'
+          'dd40905a3392ac01dd344cef9e9866d835378134'
+          '0f667c9ede9cdf041925a71875ea26b11cb6fba3'
+          '8f07ab01f91ad2942d050173ee1c7409e1b36fe1'
+          '52105f51b9387415c33be5b11454593af3ba5162'
+          '5a94f020e9b52aa4ee6efc247beacb859d9fbd0c'
+          '8af2c7b5ee0d7e255125f5d56b723bd521a399f5'
+          'cef13f447e3e185f69e91a2d4aae816ab7a13ae9'
+          'd633f4658b0475e047fd31aebac361238289234d'
+          '038037dc1cb3afa4b236d2234cb9444350e2265a'
+          '0900464004ba76b965c4383a0fc8dfd933e53e56'
+          '8e9f716957c6c3bda377fa14f52d1c46c6cbc500'
+          'd2cefa57e101191e66fc4973827473f1a484b53f'
+          '039697953f54f5bbd4e3ba30b7ee3ac8208dda56'
+          '729949cf1d0d1c32a987582fb865f96dd4e94421'
+          '449e3c3384f48c7e127ae6cf17a8892024ce9d79'
+          'abad465232454c5887986873d44d01171bb0165f'
+          '0091ea4f2d8b2696d21abcd6251a520fe79ed744'
+          '98971e128f343e0f8e2a4dd2901934e69763aaa0'
+          '4632dc79e312565fe1ffae11837b8d793891ec6b'
+          '3b1aa8405597c0f58a8953e01f1469bb4478fb0a'
+          '6bd608aa91452e26f970308950ebcae7ed32cabb'
+          'ed85b1452d82f2f502d5c52ba9dea7f09fd3d555'
+          'e080ae34aa250a255a3dfcb737b5e81d54d5c1b7'
+          '593152d70049c28868c41c7b269c0ccc192d8ac1'
+          '7d2c57bded39204bbb60633b0194108da1f34e9d'
+          '9d9865f1f6c0237c5165922af8c872fb97d4095e'
+          'a2b7f77c2df5d55b2bcc48d98daf92e4dbad9cfe')
 
 build() {
   cd ${srcdir}
 
-  for lang in ar bg bs ca ca@valencia cs da de el en_GB es et eu fi fr ga gl he hi hr hu ia id is it ja kk km ko lt lv mr nb nds nl nn pa pl pt pt_BR ro ru sk sl sr sv tr ug uk vi wa zh_CN zh_TW; do
+  for lang in ar bg bs ca ca@valencia cs da de el en_GB es et eu fi fr ga gl he hi hr hu ia id is it ja kk km ko lt lv mr nb nds nl nn pa pl pt pt_BR ro ru sk sl sr sv tr ug uk wa zh_CN zh_TW; do
     mkdir -p build/${lang}
     cd build/${lang}
     cmake ${srcdir}/${pkgbase}-${lang}-${pkgver} \
@@ -475,12 +472,6 @@ package_kde-l10n-ug() {
 package_kde-l10n-uk() {
 	pkgdesc=('Ukrainian Localization for KDE')
 	cd ${srcdir}/build/uk
-	make DESTDIR=${pkgdir} install
-}
-
-package_kde-l10n-vi() {
-	pkgdesc=('Vietnamese Localization for KDE')
-	cd ${srcdir}/build/vi
 	make DESTDIR=${pkgdir} install
 }
 
