upgpkg: python-astroid 1.2.1-1
git-svn-id: file:///srv/repos/svn-packages/svn@220641 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgbase=python-astroid
 pkgname=('python2-astroid' 'python-astroid')
-pkgver=1.2.0
+pkgver=1.2.1
 pkgrel=1
 pkgdesc="Useful miscellaneous modules used by Logilab projects"
 arch=('any')
@@ -11,8 +11,8 @@ url="https://bitbucket.org/logilab/astroid"
 license=('LGPL')
 makedepends=('python' 'python2')
 checkdepends=('python-logilab-common' 'python2-logilab-common')
-source=(https://pypi.python.org/packages/source/a/astroid/astroid-${pkgver}.tar.gz)
-sha1sums=('9943a0bbd3410164c161ae11039dd09762023629')
+source=("https://pypi.python.org/packages/source/a/astroid/astroid-${pkgver}.zip")
+sha1sums=('597c668553d9ee1431ff6da07e12769072477859')
 
 prepare() {
   cp -a astroid-${pkgver}{,-py3}
@@ -27,13 +27,11 @@ build() {
 }
 
 check() {
-  # must be ran in target system, how?
-
   cd astroid-${pkgver}/test
-  #python2 -m unittest discover -p "unittest*.py"
+  PYTHONPATH="$PWD/../build/lib:$PYTHONPATH" python2 -Wi -m unittest discover -p "unittest*.py"
 
   cd ../../astroid-${pkgver}-py3/test
-  #python -m unittest discover -p "unittest*.py"
+  PYTHONPATH="$PWD/../build/lib:$PYTHONPATH" python -Wi -m unittest discover -p "unittest*.py" || warning "Tests failed"
 }
 
 package_python2-astroid() {
