--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,15 +2,16 @@
 # Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=mutagen
-pkgver=1.23
+pkgver=1.24
 pkgrel=1
 pkgdesc="An audio metadata tag reader and writer"
 arch=('any')
-url="http://code.google.com/p/mutagen/"
+url="https://bitbucket.org/lazka/mutagen"
 license=('GPL2')
 depends=('python2')
-source=(https://bitbucket.org/lazka/mutagen/downloads/${pkgname}-${pkgver}.tar.gz)
-sha1sums=('be72275ecded3bf41da5e44234d075deb71f5f62')
+source=(https://bitbucket.org/lazka/mutagen/downloads/${pkgname}-${pkgver}.tar.gz{,.sig})
+sha1sums=('d013e8e244b4671f2db97e3e1a702c2e7d21a649'
+          'SKIP')
 
 check() {
   cd ${pkgname}-${pkgver}
@@ -20,8 +21,4 @@ check() {
 package() {
   cd ${pkgname}-${pkgver}
   python2 setup.py install --root="${pkgdir}"
-  install -d "${pkgdir}/usr/bin"
-  install -m755 tools/* "${pkgdir}/usr/bin"
-  sed -i 's|^#!.*/usr/bin/env.*python|#!/usr/bin/env python2|' "${pkgdir}"/usr/bin/* \
-    "${pkgdir}/usr/lib/python2.7/site-packages/mutagen/__init__.py"
 }
